# webir

./: .gitignore  .npmignore  README.md  bun.lockb  catall  dom-api-ir.json  go.mod  index.ts  ir.schema.json  main.go  package.json  tsconfig.json
.github/: renovate.json
.github/workflows/: publish-bindings.yaml  update-ir.yaml
resources/: gleam-reserved-words.txt  gleam-tool-versions  gleam.toml.template  ir.schema.json
rustcli/: Cargo.toml
rustcli/src/: main.rs
scripts/: extract.js
src/cli/: emit.ts  extract.ts  index.ts  interfaces.ts  validate.ts
src/lib/: emit-gleam.ts  extractor.ts  validator.ts
zig/: build.zig
zig/src/: main.zig  parser.zig
